Add: Implement me/file/list, me/file/check-usage
